set table pagination appearance

--- a/app/src/styles/_variables.scss
+++ b/app/src/styles/_variables.scss
@@ -10,6 +10,8 @@ $fontFamilyBase: 'Asap', sans-serif;
 /* colors */
 $white: #fff;
 $black: #000;
+$globalLightColor: #fff;
+$globalDarkColor: #17223B;
 $globalBackground: #17223B;
 $globalFontColor:#fff;
 $globalColor: #76a21e;
@@ -22,6 +24,8 @@ $filterBackground: #243354;
 /* modules variables */
 $navbarHeight: 80px;
 $filterHeight: 80px;
+$paginationWidth: 30px;
+$paginationHeight: 30px;
 /* /modules variables */
 
 /* global variables */
