--- a/app/src/styles/_globals.scss
+++ b/app/src/styles/_globals.scss
@@ -82,3 +82,30 @@ a:focus {
     }
 }
 /* /modules */
+
+/* pages */
+.page {
+    &-wrapper {
+        margin-bottom: 100px;
+    }
+
+    &-title {
+        font-size: 3.8rem;
+        letter-spacing: 0.43px;
+        margin: 70px 0;
+    }
+
+    &-content {
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+        letter-spacing: 0.39px;
+
+        h3 {
+            font-size: 2.5rem;
+            font-weight: 700;
+            letter-spacing: 0.43px;
+            margin: 0 0 25px;
+        }
+    }
+}
+/* /pages */
