fixed footer position bug

--- a/app/src/styles/_variables.scss
+++ b/app/src/styles/_variables.scss
@@ -26,6 +26,7 @@ $navbarHeight: 80px;
 $filterHeight: 80px;
 $paginationWidth: 30px;
 $paginationHeight: 30px;
+$footerHeight: 60px;
 /* /modules variables */
 
 /* global variables */
