--- a/app/src/styles/_globals.scss
+++ b/app/src/styles/_globals.scss
@@ -2,6 +2,11 @@ html {
     font-size: 10px;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 body {
     font-family:  $fontFamilyBase;
     -webkit-font-smoothing: antialiased;
